# secure_log

./: .gitignore  Cargo.toml  README.md
examples/: simple_logging.rs
src/: error.rs  lib.rs
