[package]
name = "secure_log"
version = "0.1.0"
edition = "2024"
description = "A secure logging library for Rust with AES-256-GCM encryption"
authors = ["Shawn Hagler haglershawn@gmail.com"]
license = "MIT"
repository = "https://github.com/shagler/secure_log"
documentation = "https://docs.rs/secure_log"
readme = "README.md"
keywords = ["logging", "encryption", "security", "async", "aes-256-gcm"]
categories = ["cryptography", "development-tools::debugging"]

[[example]]
name = "simple_logging"
path = "examples/simple_logging.rs"

[dependencies]
log = "0.4"
aes-gcm = "0.10.1"
base64 = "0.21"
chrono = "0.4"
crossbeam-channel = "0.5"
rand = "0.8"
thiserror = "1.0"
sha2 = "0.10"
